--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
+    "build.server": "vite build -c adapters/express/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
     "deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
     "dev": "vite --mode ssr",
@@ -17,20 +18,25 @@
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
+    "serve": "node server/entry.express",
     "start": "vite --open --mode ssr",
     "qwik": "qwik"
   },
   "devDependencies": {
     "@builder.io/qwik": "^1.2.8",
     "@builder.io/qwik-city": "^1.2.8",
+    "@types/compression": "^1.7.2",
     "@types/eslint": "8.44.1",
+    "@types/express": "4.17.17",
     "@types/node": "^20.4.5",
     "@typescript-eslint/eslint-plugin": "6.2.0",
     "@typescript-eslint/parser": "6.2.0",
     "autoprefixer": "^10.4.14",
+    "compression": "^1.7.4",
     "daisyui": "^3.6.1",
     "eslint": "8.45.0",
     "eslint-plugin-qwik": "^1.2.8",
+    "express": "4.18.2",
     "postcss": "8.4.27",
     "prettier": "3.0.0",
     "tailwindcss": "3.3.3",
