--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/compression": "^1.7.2",
     "@types/eslint": "8.44.1",
     "@types/express": "4.17.17",
+    "@types/leaflet": "^1.9.3",
     "@types/node": "^20.4.5",
     "@typescript-eslint/eslint-plugin": "6.2.0",
     "@typescript-eslint/parser": "6.2.0",
@@ -46,6 +47,7 @@
     "vite-tsconfig-paths": "4.2.0"
   },
   "dependencies": {
+    "leaflet": "^1.9.4",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2"
   }
